--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://etvon.github.io/CUBE/index.html'
+baseURL = 'https://etvon.github.io/CUBE/'
 languageCode = 'en-us'
 title = 'eWeLink CUBE'
 theme = 'hugo-theme-relearn'
